test/pass/test_require/require_depended.sest
module RequireDepended = struct

  val hello() =
    "Hello"

end
